added general utilities

--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -26,7 +26,8 @@
 						password: <input type="password" name="password" maxlength="30" required>
 					</div>
 					<input id="loginbutton" type="button" value="login">
-					<p id="error-message-login" class="error-message"></p>
+
+					<div id="error-message-container-login"></div>
 				</fieldset></form>
 			</div>
 
@@ -54,9 +55,9 @@
 				<div id="repeat-password-input-signup" class="input-container">
 						repeat password: <input type="password" name="repeatPassword" maxlength="30" required>
 				</div>
-				<input id="signupbutton" type="button" value="login">
-				<p id="error-message-signup" class="error-message"></p>
+				<input id="signupbutton" type="button" value="signup">
 
+				<div id="error-message-container-signup"></div>
 			</fieldset>
 			</form>		
 		</div>
