--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -17,8 +17,8 @@
 
 		<div class="login-container">
 			<div class="login-form">
+				<h3>Login</h3>
 				<form id="loginform" action="#">
-				<fieldset>
 					<div id="username-input-login" class="input-container">
 						username: <input type="text" name="username" maxlength="50" required>
 					</div>
@@ -28,14 +28,13 @@
 					<input id="loginbutton" type="button" value="login">
 
 					<div id="error-message-container-login"></div>
-				</fieldset></form>
+				</form>
 			</div>
 
-		</div>
 		
 		<div class="login-form">
+			<h3>Registrati</h3>
 			<form id="signupform" action="#">
-			<fieldset>
 			
 				<div id="name-input-signup" class="input-container">
 						name: <input type="text" name="name" maxlength="50" required>
@@ -58,10 +57,11 @@
 				<input id="signupbutton" type="button" value="signup">
 
 				<div id="error-message-container-signup"></div>
-			</fieldset>
+
 			</form>		
 		</div>
 
+		</div>
 	</div>
 	
 </body>
