group details working, still need to move the div up

--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -18,14 +18,14 @@
 		<div class="login-container">
 			<div class="login-form">
 				<h3>Login</h3>
-				<form id="loginform" action="#">
+				<form id="login-form" action="#">
 					<div id="username-input-login" class="input-container">
 						username: <input type="text" name="username" maxlength="50" required>
 					</div>
 					<div id="password-input-login" class="input-container">
 						password: <input type="password" name="password" maxlength="30" required>
 					</div>
-					<input id="loginbutton" type="button" value="login">
+					<input id="login-button" type="button" value="login">
 
 					<div id="error-message-container-login"></div>
 				</form>
@@ -34,7 +34,7 @@
 		
 		<div class="login-form">
 			<h3>Registrati</h3>
-			<form id="signupform" action="#">
+			<form id="signup-form" action="#">
 			
 				<div id="name-input-signup" class="input-container">
 						name: <input type="text" name="name" maxlength="50" required>
@@ -54,7 +54,7 @@
 				<div id="repeat-password-input-signup" class="input-container">
 						repeat password: <input type="password" name="repeatPassword" maxlength="30" required>
 				</div>
-				<input id="signupbutton" type="button" value="signup">
+				<input id="signup-button" type="button" value="signup">
 
 				<div id="error-message-container-signup"></div>
 
