made hidden real hidden

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -10,13 +10,14 @@
 
 <body>
 
+	<div id="homepage-button-container" class="hidden" align="right">
+		<a id="homepage-button" href="">Homepage</a>
+	</div>
+
 	<div align="right">
 		<a href="Logout">Logout</a>
 	</div>
-	
-	<div align="right">
-		<a id="homepage-button" class="hidden" href="">Homepage</a>
-	</div>
+
 	
 	<div id="homepage-container" class="container">
 		<h3>Gruppi che hai creato:</h3>
