moved groupdetails code to proper js file, added security check in GetGroupDetails and removed group id in html id

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
 <script src="utils.js" charset="utf-8" defer></script>
 <script src="homepage.js" charset="utf-8" defer></script>
+<script src="groupdetails.js" charset="utf-8" defer></script>
 <!-- LINK OTHER,, JS FILES HERE -->
 </head>
 
