added modal windows

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -96,6 +96,16 @@
 		</table>
 	
 	</div>
+	
+	<section id="modal-panel" class="modal hidden">
+		<div class="container">
+			<button id="modal-close-button" class="close-button">X</button>
+			<div class="registered-users-container">
+				<p>ALL THE USERS</p>
+			</div>
+		</div>
+	</section>
+	<div id="modal-overlay" class="overlay hidden"></div>
 
 </body>
 </html>
