working error in user selection

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -103,7 +103,7 @@
 			<h2>Seleziona gli utenti da invitare nel gruppo</h2>	
 			<div class="container">
 					
-				<div id="users-error"></div>
+				<div id="error-user-selection-container"></div>
 				
 				<form action="#">
 					<table class="user-table">
