working cancel page

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -97,6 +97,12 @@
 	
 	</div>
 	
+	<div id="cancel-container" class="container hidden">
+		<h1>Cancellazione del gruppo: <span id="cancel-group-name"></span></h1>
+		<p align="center" class="error-message">Tre tentativi di definire un gruppo con un numero di partecipanti errato, il gruppo non sara' creato</p>
+		<a id="cancel-homepage-button" href="">Homepage</a>
+	</div>
+	
 	<section id="modal-panel" class="modal hidden">
 		<div class="container">
 			<button id="modal-close-button" class="close-button" align="right" >X</button>
