working group creation

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -74,6 +74,7 @@
 				<div id="error-newgroup-container"></div>
 			</form>
 		</div>
+		<div id="group-saved-message" class="success-message hidden">Gruppo salvato!</div>
 	</div>
 	
 	<div id="group-details-container" class="container hidden">
