--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -75,6 +75,7 @@
 			</form>
 		</div>
 		<div id="group-saved-message" class="success-message hidden">Gruppo salvato!</div>
+				
 	</div>
 	
 	<div id="group-details-container" class="container hidden">
@@ -95,6 +96,10 @@
 			<tbody id="group-participants-table">
 			</tbody>
 		</table>
+		
+		<div class="container">
+			<img id="trash" src="images/trash.svg" class="trash">
+		</div>
 	
 	</div>
 	
