--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -111,7 +111,6 @@
 	
 	<section id="modal-panel" class="modal hidden">
 		<div class="container">
-			<button id="modal-close-button" class="close-button" align="right" >X</button>
 			<h2>Seleziona gli utenti da invitare nel gruppo</h2>	
 			<div class="container">
 					
@@ -129,7 +128,10 @@
 						<tbody id="users-table-body">
 						</tbody>
 					</table>
-					<button id="invite-users-button" type="submit">INVITA</button>		
+					<div class="container">
+						<button id="invite-users-button" type="submit">INVITA</button>		
+						<button id="modal-close-button">CANCELLA</button>
+					</div>
 				</form>
 			</div>
 		</div>
