pretty much working bin

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -98,6 +98,7 @@
 		</table>
 		
 		<div class="container">
+			<div id="remove-user-error-container"></div>
 			<img id="trash" src="images/trash.svg" class="trash">
 		</div>
 	
