added error creation on fail requests or invalid params

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -21,6 +21,7 @@
 
 	
 	<div id="homepage-container" class="container">
+		<div id="groups-table-error-container"></div>
 		<h3>Gruppi che hai creato:</h3>
 		<table>
 			<thead>
