added creator check to show the bin

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -101,7 +101,7 @@
 		<div class="container">
 			<div id="remove-user-error-container"></div>
 			<div id="user-removed-message" class="success-message hidden">Utente eliminato!</div>
-			<img id="trash" src="images/trash.svg" class="trash">
+			<img id="trash" src="images/trash.svg" class="trash hidden">
 		</div>
 	
 	</div>
