--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -117,7 +117,9 @@
 			<h2>Seleziona gli utenti da invitare nel gruppo</h2>	
 			<div class="container">
 					
-				<div id="error-user-selection-container"></div>
+				<div id="errors-user-selection-container">
+					<div id="error-user-selection-container"></div>
+				</div>
 				
 				<form action="#">
 					<table class="user-table">
