first steps to reach no global scope target

--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -4,9 +4,10 @@
 <title>Home</title>
 <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
 <script src="utils.js" charset="utf-8" defer></script>
-<script src="homepage.js" charset="utf-8" defer></script>
+<script src="groupsmanager.js" charset="utf-8" defer></script>
 <script src="groupdetails.js" charset="utf-8" defer></script>
 <script src="users.js" charset="utf-8" defer></script>
+<script src="cancel.js" charset="utf-8" defer></script>
 </head>
 
 <body>
