--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<div class="container">
+	<div class="container visible-container">
 
 		<h1>Gruppi di Lavoro</h1>
 
@@ -25,7 +25,7 @@
 					<div id="password-input-login" class="input-container">
 						password: <input type="password" name="password" maxlength="30" required>
 					</div>
-					<input id="login-button" type="button" value="login">
+					<input id="login-button" type="submit" value="login">
 
 					<div id="error-message-container-login"></div>
 				</form>
@@ -54,7 +54,7 @@
 				<div id="repeat-password-input-signup" class="input-container">
 						repeat password: <input type="password" name="repeatPassword" maxlength="30" required>
 				</div>
-				<input id="signup-button" type="button" value="signup">
+				<input id="signup-button" type="submit" value="signup">
 
 				<div id="error-message-container-signup"></div>
 
